# llm_pyexecutor

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml  pre_release.yml  publish.yml
llm_pyexecutor/: constants.py  local_executor.py  logger.py
llm_pyexecutor/cli/: extractor.py
llm_pyexecutor/code/: __init__.py  dependecies.py  exceptions.py  executor.py  extractor.py
llm_pyexecutor/environment_manager/: exceptions.py  virtual_environment.py
notebook/: .gitignore  code_executor_with_qwen2.5-coder32B.ipynb
notebook/.ipynb_checkpoints/: code_executor_with_qwen2.5-coder32B-checkpoint.ipynb
scripts/: docstring.sh  linting.sh  testing.sh
tests/: .gitignore  test_local_executor.py
